tests/negative/UnexpectedField.juvix
module UnexpectedField;

type T := t;

type R := mkR {
 r : T;
};

f : R;
f := (mkR t) @R{x := 1};
